SOLR-16427: Evaluate and fix errorprone rules (#1037)
Enables the following errorprone rules:
* `ArrayEquals`
* `ArrayHashCode`
* `ArrayToString`
* `CollectionUndefinedEquality`
* `EqualsIncompatibleType`
* `FormatString`
* `UndefinedEquals`

Most of the fixes are straight forward - use `.equals` and `Objects.equals` where appropriate. Used `contentEquals` for char sequences. Make sure to compare `Instant` instead of just `Date`. Ensure proper string format number of arguments. Make sure to use proper Array methods for `hashCode` and `toString`